# Bot_Architecture

./: .gitignore  README.md  pyproject.toml  runner.py
bot/: bot_server.py  config.py
bot/handlers/commands/: some_entity_commands.py
bot/handlers/interfaces/: base_commands.py
bot/handlers/interfaces/clients/: some_client.py
bot/handlers/states/: fsm_forms.py
bot/keyboards/: some_keyboards.py
bot/messages/: some_messages.py
bot/requests/: some_client.py
